save, update, delete completed with proper messages.

--- a/Assignment_One/index.html
+++ b/Assignment_One/index.html
@@ -5,14 +5,20 @@
 	    <script src="js/angular-messages.min.js"></script>
 	    <script src="js/app.js"></script>
 	    <script src="js/employeeManagementController.js"></script>
+	   	<script src="js/bootstrap.min.js"></script>
 	</head>
 	<body class="container">
 		<div ng-app="myApp"  ng-controller="employeeManagementController">
-			<h2  class="page-header">Employee Management</h2>
 			<form class="form" name="myform">
+				<h2 class="page-header">Employee Management</h2>
 				<div clas="row">
 					<div class="col-md-1"></div>
 					<div class="col-md-10">
+						<div class="row">
+							<div class="col-sm-12 col-md-12 alert alert-success" ng-show="crudAlertMessage.length > 0">
+								{{crudAlertMessage}}
+							</div>
+						</div>	
 						<div class="row form-group">
 							<label class="col-sm-2 col-md-2">First Name</label>
 							<div class="col-sm-4 col-md-4">
@@ -23,7 +29,6 @@
 							    <p ng-message="pattern" > firstname invalid.</p>
 							</div>
 						</div>
-
 						<div class="row form-group">
 							<label class="col-sm-2 col-sm-2">Last Name</label>
 							<div class="col-sm-4 col-sm-4">
@@ -34,7 +39,6 @@
 							    <p ng-message="pattern" > lastname invalid.</p>
 							</div>
 						</div>
-
 						<div class="row form-group">
 							<label class="col-sm-2 col-sm-2">Mobile</label>
 							<div class="col-sm-4 col-sm-4">
@@ -69,13 +73,18 @@
 						</div>
 						<div class="row form-group">
 							<div class="col-sm-1"></div>
-							<div class="col-sm-2 col-sm-2">
+							<div class="col-sm-2 col-md-2" ng-show="btnsave == true">
 								<input type="button" value="save" class="btn btn-primary btn-block" ng-click="saveDetails(empObj)" />		
 							</div>
-							<div class="col-sm-2 col-sm-2">
+							<div class="col-sm-2 col-md-2" ng-show="btnupdate == true">
+								<input type="button" value="update" class="btn btn-primary btn-block" ng-click="saveDetails(empObj)" />		
+							</div>
+							<div class="col-sm-2 col-md-2">
 					            <input type="button" value="clear" class="btn btn-warning btn-block" ng-click="clearForm()" />
 							</div>
-							<div class="col-sm-1"></div>
+							<div class="col-sm-1">
+								<input type="hidden" name="hiddenid" ng-model="empObj.id">
+							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12 col-sm-6">
@@ -88,6 +97,7 @@
 											<td> Mobile </td>
 											<td> Gender </td>
 											<td> DOB </td> 
+											<td> Panel </td> 
 										</tr>
 										<tr ng-repeat="emp in empList">
 											<td> {{ emp.id }} </td>
@@ -96,6 +106,10 @@
 											<td> {{ emp.mobileNo }} </td>
 											<td> {{ emp.gender }} </td>
 											<td> {{ emp.dob | date: 'MM/dd/yyyy'}} </td> 
+											<td> 
+												<a href="#" ng-click="editDetails(emp)"> <span class="glyphicon glyphicon-pencil"></span></a>
+												<a href="#" ng-click="deleteDetails(emp.id)"> <span class="glyphicon glyphicon-trash"></span></a>
+											</td> 
 										</tr>
 									</table>
 								</div>
@@ -112,8 +126,6 @@
 					<div class="col-md-1"></div>
 				</div>
 			</form>
-		{{output}}
-			
 		</div>
 	</body>
 </html>
